--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 
     <build>
         <finalName>maven-unit-test</finalName>
+        <sourceDirectory>src/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
