--- a/.github/workflows/onPushAndPullRequest.yml
+++ b/.github/workflows/onPushAndPullRequest.yml
@@ -3,19 +3,21 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "dev" ]
+on: [push, pull_request]
 
 jobs:
+
   build:
     name: Build and test app
 
     runs-on: ubuntu-latest
 
     steps:
+    - name: 'Create env file'
+      run: |
+        touch .env
+        echo DISPLAY=":0.0" >> .env
+        cat .env
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -24,4 +26,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: |
+        export DISPLAY=:99
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+        mvn -B package --file pom.xml
